charts/brightsky/0.0.7/templates/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 5000
      targetPort: 5000
