charts/brightsky/0.0.7/templates/api/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: brightsky
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`brightsky.jansauer.dev`)
      kind: Rule
      services:
        - name: api
          port: 5000
